@@ -19,19 +19,22 @@
 ##
 ## Use automake to process this into a Makefile.in
 
-AM_CPPFLAGS = -Wall -DPREFIX=\"$(prefix)\" -Wno-strict-aliasing @QT4CLI_CFLAGS@ @SWITCHYARD_CFLAGS@
+AM_CPPFLAGS = -Wall -DPREFIX=\"$(prefix)\" -Wno-strict-aliasing @QT4CLI_CFLAGS@ @SWITCHYARD_CFLAGS@ @ALSA_CFLAGS@
 MOC = @QT4_MOC@
 
 # The dependency for qt's Meta Object Compiler (moc)
 moc_%.cpp:	%.h
 	$(MOC) $< -o $@
 
-noinst_PROGRAMS = gpio_delay_test
+noinst_PROGRAMS = audio_delay_test\
+                  gpio_delay_test
+
+dist_audio_delay_test_SOURCES = audio_delay_test.cpp audio_delay_test.h
+nodist_audio_delay_test_SOURCES = moc_audio_delay_test.cpp
+audio_delay_test_LDADD = @QT4CLI_LIBS@ @SWITCHYARD_LIBS@ @ALSA_LIBS@ -lpthread
 
 dist_gpio_delay_test_SOURCES = gpio_delay_test.cpp gpio_delay_test.h
-
 nodist_gpio_delay_test_SOURCES = moc_gpio_delay_test.cpp
-
 gpio_delay_test_LDADD = @QT4CLI_LIBS@ @SWITCHYARD_LIBS@
 
 CLEANFILES = *~ moc_* *.qm *.obj *.idb *.pdb *ilk
