@@ -165,3 +165,5 @@
 2016-12-08 Fred Gleason <fredg@paravelsystems.com>
 	* Added a fudge-factor in the SetpointBytes() function in
 	'src/lwnetrouterd/router_hpiaudio.cpp'.
+2016-12-08 Fred Gleason <fredg@paravelsystems.com>
+	* Added an audio_delay_test(1) test harness in 'src/tests/'.
